# mf-challenge

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: new-image.yml  pull-request.yml
app/: Dockerfile  pyproject.toml  requirements.txt  scripts.py
app/app/: configuration_service.py  context.py  converters.py  db_connector.py  file_reader.py  intercepted_converter.py  main.py  mission.py  mission_detail_service.py  prediction_service.py
app/tests/: shared_test_utils.py  test_configuration_service.py  test_context.py  test_converters.py  test_db_connector.py  test_file_reader.py  test_intercepted_converter.py  test_main.py  test_mission_detail_service.py  test_prediction_service.py
app/tests/sample_inputs/: empire.json
app/tests/sample_inputs/millenium_falcon/: millennium-falcon-corrupt.json  millennium-falcon-incomplete.json
backend/: .dockerignore  Dockerfile  cli.py  conftest.py  context.py  converters.py  main.py  mission_service.py  pyproject.toml  requirements.txt
backend/givemetheodds/: cli.py  context.py  converters.py  db_connector.py  file_reader.py  main.py  mission_service.py  prediction_service.py
backend/inputs/: empire.json
backend/src/: converters.py  file_reader.py
backend/tests/: conftest.py  test_cli.py  test_context.py  test_converters.py  test_db_connector.py  test_file_reader.py  test_main.py  test_mission_service.py  test_prediction_service.py  utils.py
backend/tests/sample_inputs/millenium_falcon/: millennium-falcon-corrupt.json
frontend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  ui.py
