[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lindavik <linda.viksne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-github-actions-annotate-failures = "^0.1.6"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
shed = "^0.9.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
reformat = "scripts:reformat"
coverage = "scripts:coverage"
