[tool.poetry]
name = "givemetheodds"
version = "0.1.0"
description = ""
authors = ["lindavik <linda.viksne@gmail.com>"]

[tool.poetry.scripts]
give-me-the-odds2 = "givemetheodds.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
typer = "^0.4.0"
click = "8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
shed = "^0.9.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
