[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["lindavik <linda.viksne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.11.1"
click = "8.0.4"
watchdog = "^2.1.7"
Pillow = "^9.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
